@@ -27,6 +27,7 @@ Application Fixes:
 - Added a new bonus node called "selectexpertise". It lets the user select a specialization to add to their character with a +3 bonus instead of a +2. The syntax for this node is similar to that of "selectskill", but there is also the possibility for a "limittospecialization" attribute that limits the selection of specializations that can be chosen.
 - Added support for Astral Reputation (from Street Grimoire) and Wild Reputation (from Forbidden Arcana). They currently still need to be adjusted manually, especially because Spirit Index is information that players are not expected to accurately have, but dicepools are adjusted accordingly, and Chain Breaker's effects are appropraitely disabled for characters who have an Astral Reputation of 3 or greater.
 - Redliner's bonus is now properly updated based on the character's current cyberlimb count instead of their cyberlimb count before the given Redliner bonus refresh.
+- Characters with missing or faulty source references to their metatype/metavariant now get the proper reference assigned upon their first load.
 
 Data Changes:
 - Removed legacy nodes for Street Scum Priority values that caused incorrect nuyen amounts.
